--- a/bebelo/pubspec.yaml
+++ b/bebelo/pubspec.yaml
@@ -59,9 +59,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/background.jpg
     - assets/WelcomeBG.png
     - assets/TestBG.png
+    - assets/LoginBG.png
     - assets/products/Item1.jpg
     - assets/products/Item2.png
     - assets/products/Item3.jpg
@@ -69,6 +69,7 @@ flutter:
     - assets/promos/Promo1.jpg
     - assets/promos/Promo2.jpg
     - assets/promos/Promo3.png
+    - assets/icons/PeruFlag.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
